@@ -10,6 +10,7 @@ TGUI 0.8.5  (TBD)
 - Let ComboBox send the ItemSelected event only after the mouse is released
 - TitleBarHeight property of default renderer was ignored in ChildWindow
 - Label didn't ignore events after ignoreMouseEvents was called
+- Adding space around widgets in Grid to fill the given size wasn't working properly
 
 
 TGUI 0.8.4  (23 February 2019)
